# structure_net

./: .env.example  .gitignore  Breakthroughs.md  Neural_Network_Communication_Theory_a2b216ee_2025-07-05T00-25-02-448Z.txt  README.md  STRESS_TEST_README.md  analyze_promising_models.py  check_cuda.py  comprehensive_growth_example.py  comprehensive_test_suite.py  debug_nal_issue.py  debugging_clipboard.ipynb  experiment 1.md  experiment_1.py  extra_noodling.ipynb  extra_noodling_2.ipynb  fix_imports.py  hybrid_growth_analysis.ipynb  integration_plan.md  mod 1.md  model_analysis.csv  modern_indefinite_growth_test.py  nal_stress_test_with_seed.py  nal_tournament_evolution.py  neuroflow_demo.ipynb  pyproject.toml  pytest.ini  run_cifar10_seed_hunt.py  run_stress_test.py  run_stress_test_with_seed.py  test_basic.py  test_canonical_evolution.py  test_stress_test_simple.py  to_integrate.md  ultimate_stress_test_with_seed.py  validate_and_cleanup_models.py
.devcontainer/: devcontainer.json
config/: CONFIG_CLEANUP_TODO.md  README.md  __init__.py  migration.py  unified_config.py
docs/: CONFIG_MIGRATION_GUIDE.md  CONTRIBUTING.md  LEARNING_RATE_STRATEGIES.md  METHODOLOGY.md  NAL_ARCHITECTURE.md  New Componentwise refactoring  New Componentwise refactoring.md  adaptive_learning_rates_migration.md  adaptive_learning_rates_philosophy.md  autocorrelation_framework.md  data_system_integration_guide.md  homological_compactification_system.md  integrated_growth_system_migration.md  kernel_implementation_guide.md  logging_guide.md  magic_trace_integration.md  nal_migration_guide.md  profiling_data_guide.md  standardized_logging_system.md  storage_formats_guide.md  tricks.md
examples/: adaptive_learning_rates_example.py  autocorrelation_growth_example.py  chromadb_search_demo.py  component_logging_example.py  composable_evolution_example.py  comprehensive_growth_example.py  dataset_switching_demo.py  fiber_bundle_example.py  homological_compactification_example.py  improved_multiscale_experiment.py  migration_example.py  mnist_experiment.py  modern_growth_with_composable_system.py  modern_multi_scale_evolution.py  modular_metrics_example.py  nal_stress_test_with_seed.py  neural_architecture_lab_demo.py  optimized_profiling_demo.py  profiling_system_example.py  refactored_adaptive_learning_rates_example.py  standardized_logging_example.py  test_autobalance.py  unified_config_example.py
experiment_1_results/: experiment_summary.json  extrema_evolution.json  growth_events.json  performance_history.json  snapshot_timeline.json  training_log.json
experiments/: MEMORY_OPTIMIZATION_SUMMARY.md  cifar10_combined_experiment_fixed.py  cifar10_improved_experiment.py  data_loading_optimization.py  debug_growth_mechanism.py  (+21 more)
(+308 files in other folders)
