[project]
authors = [{name = "Ethycs", email = "Ethycs@users.noreply.github.com"}]
dependencies = []
name = "structure_net"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = { version = ">=2.4", channel = "pytorch", build = "*cuda*" }
torchvision = { version = "*", channel = "pytorch" }
pytorch-cuda = { version = "12.4.*", channel = "pytorch" }
matplotlib = "*"
numpy = "*"
pytest = "*"
tqdm = "*"

[tool.pixi.pypi-dependencies]
structure_net = { path = ".", editable = true }

[tool.pixi.tasks]
test-cuda = "python -c \"import torch; print(f'PyTorch: {torch.__version__}'); print(f'CUDA available: {torch.cuda.is_available()}'); print(f'CUDA version: {torch.version.cuda}')\""
