[project]
authors = [{name = "Ethycs", email = "Ethycs@users.noreply.github.com"}]
dependencies = []
name = "structure_net"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
matplotlib = "*"
numpy = "*"
pytest = "*"
tqdm = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
structure_net = { path = ".", editable = true }

[tool.pixi.tasks]
install-torch = "pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128"
test-cuda = "python -c \"import torch; print(f'PyTorch: {torch.__version__}'); print(f'CUDA available: {torch.cuda.is_available()}'); print(f'CUDA version: {torch.version.cuda}')\""